[2501] build,docs,misc: refactor

--- a/isoxya-plugin-crawler-html.cabal
+++ b/isoxya-plugin-crawler-html.cabal
@@ -1,7 +1,7 @@
 cabal-version:          3.0
 name:                   isoxya-plugin-crawler-html
 version:                0.0.0
-synopsis:               Isoxya Crawler HTML plugin
+synopsis:               Isoxya plugin Crawler HTML
 license:                BSD-3-Clause
 author:                 Nic Williams <tp@tiredpixel.com>
 maintainer:             Nic Williams <tp@tiredpixel.com>
