--- a/pkg/Dockerfile
+++ b/pkg/Dockerfile
@@ -27,3 +27,5 @@ CMD ["isoxya-plugin-crawler-html", "-b", "0.0.0.0", "-p", "80"]
 EXPOSE 80
 
 HEALTHCHECK CMD curl -fs http://localhost || false
+
+LABEL org.opencontainers.image.source https://github.com/isoxya/isoxya-plugin-crawler-html
