--- a/misc/streams/testing/docker-compose.yml
+++ b/misc/streams/testing/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   plugin_crawler_html:
-    image: docker.io/isoxya/isoxya-plugin-crawler-html:testing
+    image: ghcr.io/isoxya/isoxya-plugin-crawler-html:testing
     init: true
     networks:
       processor:
