--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -5,6 +5,7 @@ services:
     init: true
     volumes:
       - ./.hlint.yaml:/home/x/repo/.hlint.yaml
+      - ./.stylish-haskell.yaml:/home/x/repo/.stylish-haskell.yaml
       - ./isoxya-plugin-crawler-html.cabal:/home/x/repo/isoxya-plugin-crawler-html.cabal
       - ./lib:/home/x/repo/lib
       - ./src:/home/x/repo/src
