--- a/isoxya-plugin-crawler-html.cabal
+++ b/isoxya-plugin-crawler-html.cabal
@@ -130,6 +130,7 @@ test-suite test-isoxya-plugin-crawler-html
         Isoxya.Plugin.CrawlerHTML.Test
     build-depends:
         containers,
+        hlint,
         hspec                           ==  2.*,
         lib-common,
         lib-common-test,
