--- a/misc/streams/unstable/docker-compose.yml
+++ b/misc/streams/unstable/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2.4'
 services:
-  plugin_crawler_html:
+  plugin-crawler-html:
     image: docker.io/isoxya/isoxya-plugin-crawler-html:unstable
     init: true
     networks:
