--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       target: builder
     init: true
     volumes:
-      - .:/home/x/plugin-crawler-html
-      - /home/x/plugin-crawler-html/dist-newstyle
+      - .:/home/x/r
+      - /home/x/r/dist-newstyle
     networks:
       processor:
         aliases:
